--- a/near-friendly/src/index.html
+++ b/near-friendly/src/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>NearFriendly</title>
   <base href="/">
-
+  <!-- TODO : is there a better way ? -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <near-root>Loading...</near-root>
 </body>
+
 </html>
